# KrakScheduler

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
krakscheduler/: __init__.py  config_parser.py  event.py  scheduler.py  stand.py  worker.py  xlsx_builder.py
krakscheduler/gui/: gui.py
krakscheduler/xlsx_builder/: global_sheet.py  individual_sheet.py  xlsx_builder.py
src/: event.py  main.py  scheduler.py  stand.py  xlsx_builder.py
src/scheduler/: scheduler.py
tests/unit/: __init__.py  basic.py  test_event.py  test_stand.py  test_worker.py  test_worker_priority.py
