[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "krakscheduler"
version = "0.0.1"
authors = [
    {name = "Victor LE CORRE", email = "victor.le-corre@epita.fr"},
    {name = "Alexis GUILLOT", email = "alexis.guillot@epita.fr"},
]
description="An Automatic Scheduler"
readme="README.md"
requires-python=">=3.8"
dependencies = [
  "xlsxwriter"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
